@@ -1,5 +1,9 @@
 2005-08-18  Danilo Šegan  <danilo@gnome.org>
 
+	* doc-l10n-status.py (read_makefile_variable): Support "include" files.
+
+2005-08-18  Danilo Šegan  <danilo@gnome.org>
+
 	* modules.xml: Add gnome-netstatus.
 
 2005-08-05  Danilo Šegan  <danilo@gnome.org>
